<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/savelocationcheck"
        android:text="@string/save_to_external_storage"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/savelocationbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/savelocationcheck"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginTop="71dp"
        android:layout_toLeftOf="@+id/deletedatabutton"
        android:layout_toStartOf="@+id/deletedatabutton"
        android:background="@android:color/holo_green_light"
        android:text="@string/save_data" />

    <Button
        android:id="@+id/deletedatabutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/delete_all_data"
        android:layout_alignBaseline="@+id/savelocationbutton"
        android:layout_alignBottom="@+id/savelocationbutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>